# fuyu

./: .editorconfig  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
fuyu-core/: Cargo.toml  README.md
fuyu-core/src/: lib.rs
fuyu-core/src/ast/: decl.rs  expr.rs  ident.rs  mod.rs  pattern.rs  util.rs
fuyu-core/src/parse/: lexer.rs  mod.rs  text.rs  token.rs
fuyuc/: Cargo.toml  README.md
fuyuc/src/: main.rs
src/: lib.rs  main.rs
src/ast/: decl.rs  expr.rs  ident.rs  util.rs
src/compiler/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs  parser.rs  text.rs  token.rs
src/parse/: lexer.rs  text.rs  token.rs
