[package]
name = "fuyu"
version = "0.1.2"
authors = ["Adam Christiansen <code@adamc.io>"]
edition = "2021"
description = "The Fuyu programming language"
homepage = "https://fuyulang.org"
repository = "https://github.com/fuyulang/fuyu"
license = "MPL-2.0"
keywords = ["concurrent", "functional"]
categories = ["compilers", "concurrency"]
include = [
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/src/**/*.lalrpop",
  "/src/**/*.rs",
]

[dependencies]
# TODO: Determine minimum version numbers.
lalrpop-util = "0.22.1"
num-bigint = "0.4.6"

[build-dependencies]
# TODO: Determine minimum version numbers.
#       Or are build-depedecnies not shard between crates?
#       If this is the case then simply leave this as the latest specific version that is known to work.
lalrpop = "0.22.1"
