[package]
name = "fuyu"
version = "0.1.2"
authors = ["Adam Christiansen <code@adamc.io>"]
edition = "2021"
description = "The Fuyu programming language"
homepage = "https://fuyulang.org"
repository = "https://github.com/fuyulang/fuyu"
license = "MPL-2.0"
keywords = ["concurrent", "functional"]
categories = ["compilers", "concurrency"]
include = [
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/src/**/*.lalrpop",
  "/src/**/*.rs",
]
