[workspace]
members = [
  "fuyu-core",
  "fuyuc",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
authors = ["Adam Christiansen <code@adamc.io>"]
edition = "2021"
# 1.51 is when `resolver = "2"` was introduced so that is the absolute minimum.
rust-version = "1.51" # TODO: Determine minimum version.
homepage = "https://fuyulang.org"
repository = "https://github.com/fuyulang/fuyu"
license = "MPL-2.0"
include = [
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/src/**/*.rs",
]
