[package]
name = "fuyu"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The Fuyu programming language core library"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["concurrent", "functional", "language", "programming-language"]
categories = ["compilers", "concurrency"]
include.workspace = true
